# bevy_video_glitch

./: Cargo.toml  README.md
assets/shaders/: video-glitch.wgsl
examples/: cube.rs  post_processing.rs
src/: lib.rs  video-glitch.wgsl
