[package]
name = "bevy_video_glitch"
description = "A video glitch effect for bevy"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/bevy_video_glitch"
authors = ["Shane Celis"]
keywords = ["gamedev", "bevy", "shaders", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", default-features = false, features = [ "bevy_render", "bevy_pbr" ] }

[dev-dependencies]
bevy = "0.14"

[badges.maintenance]
status = "actively-developed"
